# BitcoinPR

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  TODO.md  docker-compose.interop.yml  docker-compose.signet.yml  docker-compose.split.yml  example.bitcoinpr.conf
.cargo/: config.toml
bitcoinpr/: Cargo.toml
bitcoinpr-core/: Cargo.toml
bitcoinpr-core/proptest-regressions/: validation.txt
bitcoinpr-core/src/: bip110.rs  block_filter.rs  chain.rs  compact_block.rs  consensus.rs  error.rs  events.rs  lib.rs  mempool.rs  merkle.rs  script.rs  splitmon.rs  time.rs  validation.rs  versionbits.rs
bitcoinpr-core/tests/: core_vectors.rs  testdata_tx_925565.hex
bitcoinpr-index/: Cargo.toml
bitcoinpr-index/src/: electrum.rs  events.rs  lib.rs  scripthash.rs
bitcoinpr-index/tests/: bech32m_scripthash.rs
bitcoinpr-mining/: Cargo.toml
bitcoinpr-mining/src/: config.rs  datum.rs  lib.rs  protocol.rs  shares.rs  stats.rs  template_provider.rs  vardiff.rs
bitcoinpr-p2p/: Cargo.toml
bitcoinpr-p2p/data/: nodes_main.txt
bitcoinpr-p2p/src/: addr_manager.rs  bloom.rs  codec.rs  dns.rs  error.rs  fixed_seeds.rs  i2p.rs  ibd.rs  lib.rs  manager.rs  messages.rs  netaddr.rs  peer.rs  scoring.rs  socks5.rs  sync.rs  tor.rs  transport.rs  v2_transport.rs
bitcoinpr-rpc/: Cargo.toml
bitcoinpr-rpc/src/: auth.rs  lib.rs  methods.rs  server.rs  types.rs
bitcoinpr-storage/: Cargo.toml
bitcoinpr-storage/src/: block_store.rs  error.rs  fast_hash.rs  header_index.rs  lib.rs  prune.rs  tx_index.rs  utxo_set.rs
bitcoinpr-web/: Cargo.toml
bitcoinpr-web/src/: auth.rs  lib.rs  server.rs  state.rs  ws.rs
bitcoinpr-web/src/api/: address.rs  blocks.rs  info.rs  mempool.rs  mining.rs  mod.rs  recent.rs  search.rs  split.rs  stats.rs  txs.rs
bitcoinpr-web/static/: index.html
bitcoinpr-web/static/css/: style.css
bitcoinpr-web/static/js/: app.js  mining.js
bitcoinpr/src/: config.rs  main.rs  node.rs  recovery.rs
contrib/: bitcoinprd.service
docker/bitcoin-knots/: Dockerfile
docker/btcd/: Dockerfile
docker/libbitcoin/: Dockerfile  bs.cfg  bx.cfg  entrypoint.sh
docs/: datum.md  interop-cluster.md  mining-config.md  relay-policy.md  tor-i2p.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_codec.rs  fuzz_electrum.rs  fuzz_mempool.rs  fuzz_script.rs  fuzz_undo.rs
scripts/: dashboard.sh  gate.sh  interop-cluster.sh  interop-dash.sh  interop-generate.sh  interop-logs.sh  interop-split-test.sh  interop-test.sh  sv1_mine_one.py
