[package]
name = "bitcoinpr-core"
version.workspace = true
edition.workspace = true

[dependencies]
bitcoinpr-storage = { path = "../bitcoinpr-storage" }
bitcoin.workspace = true
serde.workspace = true
tracing.workspace = true
thiserror.workspace = true
hex.workspace = true
rayon.workspace = true
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
tempfile = "3"
serde_json.workspace = true
bitcoinconsensus = "0.106"
proptest.workspace = true
num-bigint.workspace = true
