[package]
name = "bitcoinpr-index"
version.workspace = true
edition.workspace = true

[dependencies]
bitcoinpr-core = { path = "../bitcoinpr-core" }
bitcoinpr-p2p = { path = "../bitcoinpr-p2p" }
bitcoinpr-storage = { path = "../bitcoinpr-storage" }
bitcoin.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
anyhow.workspace = true
lru.workspace = true
rocksdb.workspace = true
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pki-types = { version = "1.7", features = ["std"] }
rcgen = "0.13"

[dev-dependencies]
tempfile = "3"
