[package]
name = "bitcoinpr-mining"
version.workspace = true
edition.workspace = true

[dependencies]
bitcoinpr-core = { path = "../bitcoinpr-core" }
bitcoinpr-p2p = { path = "../bitcoinpr-p2p" }
bitcoinpr-storage = { path = "../bitcoinpr-storage" }
bitcoinpr-index = { path = "../bitcoinpr-index" }
bitcoin.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
anyhow.workspace = true
toml = "0.8"
tokio-rustls = "0.26"
rustls = "0.23"
webpki-roots = "0.26"
