[package]
name = "bitcoinpr-p2p"
version.workspace = true
edition.workspace = true

[dependencies]
bitcoinpr-core = { path = "../bitcoinpr-core" }
bitcoinpr-storage = { path = "../bitcoinpr-storage" }
bitcoin.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
rand = "0.8"
hex.workspace = true

[dev-dependencies]
tempfile = "3"
